# SLOPE

Julia/: CMakeLists.txt  CppSLOPE.jl  make  testCppSLOPE.jl
src/: JcppExports.cpp  prox.cpp  prox.h
